[gd_scene load_steps=8 format=2]

[ext_resource path="res://Art/ui/numbers.png" type="Texture" id=1]
[ext_resource path="res://scenes/utility/ThreeNumberDisplay/ThreeNumberDisplay.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="StreamTexture" id=2]
load_path = "res://.import/numbers.png-b6d56a347e16bf7b0b2c305cc257afb3.stex"

[sub_resource type="AtlasTexture" id=3]
atlas = SubResource( 2 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="StreamTexture" id=4]
load_path = "res://.import/numbers.png-b6d56a347e16bf7b0b2c305cc257afb3.stex"

[sub_resource type="AtlasTexture" id=5]
atlas = SubResource( 4 )
region = Rect2( 0, 0, 8, 8 )

[node name="ThreeNumberDisplay" type="HBoxContainer"]
margin_right = 96.0
margin_bottom = 72.0
size_flags_vertical = 3
custom_constants/separation = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Number1" type="TextureRect" parent="."]
margin_right = 32.0
margin_bottom = 72.0
size_flags_horizontal = 7
size_flags_vertical = 3
texture = SubResource( 1 )
stretch_mode = 6

[node name="Number2" type="TextureRect" parent="."]
margin_left = 32.0
margin_right = 64.0
margin_bottom = 72.0
size_flags_horizontal = 7
size_flags_vertical = 3
texture = SubResource( 3 )
stretch_mode = 6

[node name="Number3" type="TextureRect" parent="."]
margin_left = 64.0
margin_right = 96.0
margin_bottom = 72.0
size_flags_horizontal = 7
size_flags_vertical = 3
texture = SubResource( 5 )
stretch_mode = 6
